--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-native-gesture-handler": "~1.10.2",
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
-    "@react-native-community/masked-view": "0.1.10"
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-native-async-storage/async-storage": "^1.13.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
