--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
-    "react-native-web": "^0.16.3",
-    "react-via-cep": "^2.0.8"
+    "react-native-web": "^0.16.3"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
