--- a/mobile/package.json
+++ b/mobile/package.json
@@ -30,7 +30,8 @@
     "react-native-screens": "~3.0.0",
     "react-native-web": "~0.13.12",
     "react-native-maps": "0.27.1",
-    "expo-location": "~12.0.4"
+    "expo-location": "~12.0.4",
+    "expo-mail-composer": "~10.1.2"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
