--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --ignore-watch node_modules src/server.ts",
-    "knex:seed": "knex --knexfile knexfile.ts seed:run",
+    "knex:seed:coleta": "knex --knexfile knexfile.ts seed:run --specific=create_coleta_seletiva.ts",
+    "knex:seed:points": "knex --knexfile knexfile.ts seed:run --specific=create_ecoponto_points.ts",
     "knex:migrate": "knex --knexfile knexfile.ts migrate:latest",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
