--- a/mobile/app.json
+++ b/mobile/app.json
@@ -24,6 +24,7 @@
     "android": {
       "package": "edu.ifmg.conscientizapn",
       "versionCode": 1,
+      "permissions": ["CAMERA", "ACCESS_COARSE_LOCATION", "ACCESS_FINE_LOCATION", "ACCESS_BACKGROUND_LOCATION", "FOREGROUND_SERVICE"],
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
