--- a/mobile/package.json
+++ b/mobile/package.json
@@ -27,6 +27,7 @@
     "react-input-mask": "^2.0.4",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-image-crop-picker": "^0.36.4",
     "react-native-image-picker": "^4.0.6",
     "react-native-maps": "0.28.0",
     "react-native-masked-text": "^1.13.0",
