--- a/server/package.json
+++ b/server/package.json
@@ -16,13 +16,22 @@
     "license": "ISC",
     "dependencies": {
         "@types/express": "^4.17.12",
+        "aws-sdk": "^2.1025.0",
         "cors": "^2.8.5",
+        "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "knex": "^0.95.6",
+        "mongoose": "^6.0.12",
+        "morgan": "^1.10.0",
+        "multer": "^1.4.3",
+        "multer-s3": "^2.10.0",
         "sqlite3": "^5.0.2"
     },
     "devDependencies": {
         "@types/cors": "^2.8.10",
+        "@types/morgan": "^1.9.3",
+        "@types/multer": "^1.4.7",
+        "@types/multer-s3": "^2.7.11",
         "ts-node": "^10.0.0",
         "ts-node-dev": "^1.1.6",
         "typescript": "^4.3.2"
